# video-summarizer

./: .gitignore  ai_processor.py  app.py  auth.py  pyproject.toml  requirements.txt  saves.py  supabase_client.py  yt_api.py
static/: base.css
templates/: base.html  index.html  library.html  result.html
