[project]
name = "video-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-session>=0.8.0",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "supabase>=2.31.0",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B"
]
